--- a/por/templates/base.html
+++ b/por/templates/base.html
@@ -9,7 +9,7 @@
   </script>
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-      <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.css" %}'>
+      <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap.min.css" %}'>
       <link rel="stylesheet" type="text/css" href='{% static "css/font-awesome.min.css" %}'>
       <link rel="stylesheet" type="text/css" href='{% static "css/toastr.min.css" %}'>
       <link rel="stylesheet" type="text/css" href='{% static "css/messenger.css" %}'>
@@ -17,17 +17,14 @@
       <link rel="stylesheet" type="text/css" href='{% static "css/messenger-theme-flat.css" %}'>
       <link rel="stylesheet" type="text/css" href='{% static "css/jquery.upvote.css" %}'>
       <link rel="stylesheet" type="text/css" href='{% static "css/custom.css" %}'>
-      <link href="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
-      <script type="text/javascript" src='{% static "js/jquery-3.3.1.min.js" %}'></script>
+      <link rel="stylesheet" type="text/css" href='{% static "css/bootstrap-datetimepicker.min.css" %}'>
+      <script type="text/javascript" src='{% static "js/jquery-3.5.1.min.js" %}'></script>
       <script type="text/javascript" src='{% static "js/jquery.validate.min.js" %}'></script>
       <script type="text/javascript" src='{% static "js/bootstrap.min.js" %}'></script>
       <script type="text/javascript" src='{% static "js/toastr.min.js" %}'></script>
       <script type="text/javascript" src='{% static "js/messenger.min.js" %}'></script>
-      <!--<script type="text/javascript" src='{% static "js/jquery.upvote.js" %}'></script>-->
-      <!--<script type="text/javascript" src='{% static "js/vue.js" %}'></script>-->
-      <script type="text/javascript" src='{% static "js/axios.min.js" %}'></script>
-      <script src="//cdn.bootcss.com/moment.js/2.17.1/moment.min.js"></script>
-      <script src="//cdn.bootcss.com/bootstrap-datetimepicker/4.17.44/js/bootstrap-datetimepicker.min.js"></script>
+      <script type="text/javascript" src='{% static "js/moment.min.js" %}'></script>
+      <script type="text/javascript" src='{% static "js/bootstrap-datetimepicker.min.js" %}'></script>
       <script type="text/javascript" src='{% static "js/custom.js" %}'></script>
      
       <meta name="viewport" content="initial-scale=1.0">
